fix(minor): Remove white gap between carousel images

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -13,7 +13,7 @@
 
 .carousel__slides {
   width: 100%;
-  column-gap: 20px;
+  column-gap: 0px;
   display: flex;
   overflow: auto;
   scroll-snap-type: x mandatory;
